# lallegro

./: .gitignore  CMakeLists.txt  README.md  apidiff.md  config.ld  configTest.cfg  lallegro-scm-1.rockspec  luaapi.md  makefile  teste.lua
src/: CMakeLists.txt  Config.lua  EventQueue.lua  FSEntry.lua  File.lua  FindAllegro5.cmake  Fullscreen.lua  LuaConfig.lua  acodec.i  allegro.i  audio.i  color.i  common.i  config.i  core.i  dialog.i  direct3d.i  file.i  font.i  image.i  init.lua  makefile  memfile.i  memory.i  opengl.i  physfs.i  primitives.i  ttf.i  video.i
teste/: config.lua  eventQueueTest.lua  testaConfig.lua  teste.lua
